Changed searcg recipe endpoint to POST. Added more unit tests
