# src/main/java/com/recipe/manager/entrypoint/RecipeController.java
@@ -3,13 +3,15 @@ package com.recipe.manager.entrypoint;
 import com.recipe.manager.controller.api.RecipesApi;
 import com.recipe.manager.dto.CreateRecipeRequest;
 import com.recipe.manager.dto.Recipe;
-import com.recipe.manager.dto.RecipeSearchFilter;
 import com.recipe.manager.dto.RecipeListResponse;
+import com.recipe.manager.dto.RecipeSearchRequest;
+import com.recipe.manager.entrypoint.exception.ApiErrorCode;
+import com.recipe.manager.entrypoint.exception.ApiException;
 import com.recipe.manager.service.RecipeService;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @RestController
 public class RecipeController implements RecipesApi {
@@ -22,30 +24,16 @@ public class RecipeController implements RecipesApi {
 
     @Override
     public ResponseEntity<Recipe> addRecipe(CreateRecipeRequest createRecipeRequest) {
+        //open api doesn't generate @Size annotation. Check it manually
+        if (CollectionUtils.isEmpty(createRecipeRequest.getIngredients())) {
+            throw new ApiException(HttpStatus.BAD_REQUEST, "Ingredients cannot be empty", ApiErrorCode.RequiredParameter);
+        }
         return ResponseEntity.ok().body(recipeService.addRecipe(createRecipeRequest));
     }
 
     @Override
-    public ResponseEntity<RecipeListResponse> getRecipes(Boolean isVegetarian,
-                                                         Integer servings,
-                                                         List<String> includeIngredients,
-                                                         List<String> excludeIngredients,
-                                                         String instruction,
-                                                         Integer page,
-                                                         Integer limit) {
-
-        RecipeSearchFilter filter = new RecipeSearchFilter.Builder()
-                .vegetarian(isVegetarian)
-                .servings(servings)
-                .includeIngredients(includeIngredients)
-                .excludeIngredients(excludeIngredients)
-                .instructions(instruction)
-                .vegetarian(isVegetarian)
-                .page(page)
-                .limit(limit)
-                .build();
-
-        return ResponseEntity.ok().body(recipeService.getRecipes(filter));
+    public ResponseEntity<RecipeListResponse> searchRecipes(RecipeSearchRequest recipeSearchRequest) {
+        return ResponseEntity.ok().body(recipeService.getRecipes(recipeSearchRequest));
     }
 
     @Override
